include_directories("include")
add_subdirectory(logging)
include_directories(logging/include)
add_subdirectory(common)
include_directories(common/include)
add_subdirectory(network)
include_directories(network/include)
add_subdirectory(calibrationRig)
include_directories(calibrationRig/include)
add_subdirectory(instrumentDriver)
include_directories(instrumentDriver/include)
add_subdirectory(applicationInterface)
include_directories(applicationInterface/include)